...
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/feverCardImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/feverMenuFrameLayout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/fever_icon" />

                <FrameLayout
                    android:id="@+id/feverMenuFrameLayout"
...
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/recommendationImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/recommendationsMenuFrameLayout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/recommendations_icon" />

                <FrameLayout
                    android:id="@+id/recommendationsMenuFrameLayout"
...
