<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <View
            android:id="@+id/topAccentView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:id="@+id/pageIconImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:src="@drawable/rounded_fever_icon" />

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/topAccentView"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/pageIconImageView"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/pageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topAccentView"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/pageIconImageView"
            android:text="@string/fever_card"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/graphFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/headerRelativeLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_frame_accent_with_grey_border">

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/graph"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/graphFrameLayout"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="6"
            android:background="@drawable/rounded_frame_white_with_grey_border">

            <LinearLayout
                android:id="@+id/feverCardTableFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/rounded_frame_accent_with_grey_border"
                android:orientation="horizontal">

                <com.patientcard.views.customviews.TitilliumLightTextView
                    android:id="@+id/dateLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryGrey" />

                <com.patientcard.views.customviews.TitilliumLightTextView
                    android:id="@+id/pulseLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pulse"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryGrey" />

                <com.patientcard.views.customviews.TitilliumLightTextView
                    android:id="@+id/temperatureLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/temperature"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shortFeverRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/feverCardTableFrameLayout"
                android:nestedScrollingEnabled="false" />

            <LinearLayout
                android:id="@+id/emptyListLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feverCardTableFrameLayout"
                android:layout_centerInParent="true"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:alpha="0.5"
                    android:src="@drawable/rounded_question_mark" />

                <com.patientcard.views.customviews.TitilliumRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/list_of_fever_card_is_empty"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="22sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="22dp"
        android:visibility="visible"
        app:elevation="0dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:srcCompat="@drawable/add_icon" />

</RelativeLayout>
